Improved MetaInfConfiguration tld searches